# cert-prep

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  eslint.config.mts  nx.json  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.scripts.json
apps/cert-prep-backend/: README.md  project.json  pyproject.toml
apps/cert-prep-backend/scripts/: benchmark_ocr.py  build_backend_runtime.py  build_ocr_runtime.py  build_sidecar.py  ocr_diagnostics.py  ocr_igpu_probe.py  reasoning_bakeoff.py  reasoning_memory.py
apps/cert-prep-backend/scripts/bakeoff/: __init__.py  config.py  data.py  execution.py  reporting.py  scoring.py
apps/cert-prep-backend/scripts/openapi_client/: io.py  typescript.py
apps/cert-prep-backend/scripts/runtime_build/: __init__.py  artifacts.py
apps/cert-prep-backend/src/cert_prep_backend/: app.py  config.py  database.py  dependencies.py  errors.py  main.py  ocr_runtime.py  ocr_windowsml_runtime.py  sidecar.py
apps/cert-prep-backend/tests/: conftest.py  document_test_helpers.py  document_test_llm_fakes.py  document_test_ocr_fakes.py  llm_test_fakes.py  ocr_test_support.py  practice_test_support.py  test_api_contract.py  test_audio_transcription.py  test_audio_transcription_queue.py  test_auth_and_system.py  test_capture_runtime_setup_proxy.py  test_capture_workbench_host.py  test_capture_workbench_pipeline.py  test_database_migrations.py  test_document_cancellation.py  test_document_operations_api.py  test_document_operations_api_concurrency.py  test_documents_async.py  test_documents_ocr.py  test_documents_streaming.py  test_documents_upload.py  test_draft_job_attribution.py  test_entrypoints.py  test_exam_content.py  test_fastflowlm_installer.py  test_fastflowlm_onboarding.py  test_fastflowlm_provider.py  test_fastflowlm_trust.py  test_health.py  test_job_cancellation.py  test_llm.py  test_llm_draft_parsing.py  test_llm_model_installer.py  test_llm_provider_settings.py  test_model_downloads.py  test_ocr_external_paddle_runtime.py  test_ocr_external_windowsml_runtime.py  test_ocr_igpu_probe.py  test_ocr_paddle_provider.py  (+22 more)
apps/cert-prep-backend/tests/domains/: test_mock_exams_domain.py  test_practice_domain.py
apps/cert-prep-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/cert-prep-desktop/src-tauri/capabilities/: default.json
apps/cert-prep-desktop/src-tauri/generated-resources/: .gitkeep
apps/cert-prep-desktop/src-tauri/nsis/: installer-hooks.nsh
apps/cert-prep-desktop/src-tauri/resources/: backend-runtime-manifest.json  windowsml-ocr-runtime-manifest.json
apps/cert-prep-desktop/src-tauri/src/: archives.rs  backend.rs  backend_process.rs  capture_manifest.rs  capture_runtime.rs  commands.rs  constants.rs  lib.rs  main.rs  manifests.rs  runtime_installation.rs  windows_process.rs
apps/exam-prep-backend/: README.md  project.json  pyproject.toml
apps/exam-prep-backend/scripts/: amd_npu_official_smoke.py  benchmark_ocr.py  build_ocr_runtime.py  build_sidecar.py  generate_openapi_client.py  ocr_amd_npu_benchmark.py  ocr_amd_npu_inference_smoke.py  ocr_amd_npu_probe.py  ocr_amd_npu_smoke.py  ocr_diagnostics.py  ocr_directml_benchmark.py  ocr_directml_inference_smoke.py  ocr_directml_prepare_models.py  ocr_directml_probe.py  ocr_directml_smoke.py  ocr_igpu_probe.py  ocr_windowsml_benchmark.py  ocr_windowsml_inference_smoke.py  ocr_windowsml_prepare_models.py  ocr_windowsml_probe.py  ocr_windowsml_smoke.py  reasoning_bakeoff.py  reasoning_memory.py
apps/exam-prep-backend/scripts/bakeoff/: config.py  data.py  execution.py  reporting.py  scoring.py
apps/exam-prep-backend/scripts/ocr_directml_prepare/: cli.py  constants.py  conversion.py  inspection.py  metadata_artifacts.py  report.py
apps/exam-prep-backend/scripts/ocr_windowsml_prepare/: __init__.py  constants.py  report.py
apps/exam-prep-backend/scripts/openapi_client/: __init__.py  io.py  typescript.py
apps/exam-prep-backend/scripts/runtime_build/: artifacts.py
apps/exam-prep-backend/src/exam_prep_backend/: app.py  config.py  database.py  dependencies.py  documents_store.py  drafts_store.py  errors.py  exceptions.py  llm.py  main.py  ocr.py  ocr_amd_npu_runtime.py  ocr_benchmark.py  ocr_diagnostics.py  ocr_directml_runtime.py  ocr_ollama.py  ocr_paddle.py  ocr_paddle_text.py  ocr_runtime.py  ocr_windowsml_runtime.py  pdf_extraction.py  practice_store.py  projects_store.py  schemas.py  sidecar.py  storage.py
apps/exam-prep-backend/tests/: conftest.py  document_test_helpers.py  document_test_llm_fakes.py  document_test_ocr_fakes.py  ocr_test_support.py  test_amd_npu_official_smoke.py  test_api_contract.py  test_auth_and_system.py  test_database_migrations.py  test_documents.py  test_documents_async.py  test_documents_ocr.py  test_documents_streaming.py  test_documents_upload.py  test_exam_content.py  test_health.py  test_llm.py  test_ocr.py  test_ocr_amd_npu_runner.py  test_ocr_amd_npu_smoke.py  test_ocr_directml_inference_smoke.py  test_ocr_directml_prepare_models.py  test_ocr_directml_probe.py  test_ocr_directml_runner.py  test_ocr_directml_smoke.py  test_ocr_external_paddle_runtime.py  test_ocr_igpu_probe.py  test_ocr_paddle_provider.py  test_ocr_provider_selection.py  test_ocr_runtime_worker.py  test_ocr_windowsml_inference_smoke.py  test_ocr_windowsml_npu_prepass.py  test_ocr_windowsml_prepare_models.py  test_ocr_windowsml_probe.py  test_ocr_windowsml_runner.py  test_ocr_windowsml_smoke.py  test_practice.py  test_projects.py  test_question_drafts.py  test_reasoning_bakeoff.py  (+2 more)
apps/exam-prep-backend/tests/domains/: test_mock_exams_domain.py  test_practice_domain.py
apps/exam-prep-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/exam-prep-desktop/src-tauri/capabilities/: default.json
apps/exam-prep-desktop/src-tauri/resources/: backend-runtime-manifest.json  directml-ocr-runtime-manifest.json  ocr-runtime-manifest.json  windowsml-ocr-runtime-manifest.json
(+743 files in other folders)
