[project]
name = "exam-prep-backend"
version = "0.1.0"
description = "Local sidecar API for the exam prep desktop app."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
  "fastapi>=0.124.0,<1.0.0",
  "ollama>=0.6.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pyinstaller>=6.19.0,<7.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

