[project]
name = "exam-prep-backend"
version = "0.1.0"
description = "Local sidecar API for the exam prep desktop app."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.124.0,<1.0.0",
  "ollama>=0.6.0,<1.0.0",
  "pillow>=12.0.0,<13.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "pypdfium2>=5.0.0,<6.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
ocr-cpu = [
  "paddleocr>=3.7.0,<4.0.0",
  "paddlepaddle==3.3.0",
]
ocr-gpu = [
  "paddleocr>=3.7.0,<4.0.0",
  "paddlepaddle-gpu==3.3.0",
]
ocr-windowsml = [
  "numpy>=2.0.0,<3.0.0",
  "onnx>=1.16.1,<=1.17.0",
  "onnxruntime-windowsml>=1.24.0,<2.0.0",
  "opencv-contrib-python>=4.10.0,<5.0.0",
  "paddleocr==3.7.0",  # Keep WindowsML OCR tied to PaddleOCR 3.7.x inference/runtime contracts.
  "paddle2onnx==2.1.0; python_version < '3.13'",
  "paddlepaddle==3.3.0; python_version < '3.13'",
  "paddlex[ocr-core]==3.7.1",
  "pyclipper>=1.3.0,<2.0.0",
  "shapely>=2.0.0,<3.0.0",
  "wasdk-Microsoft.Windows.AI.MachineLearning[all]>=0.2.0; sys_platform == 'win32'",
  "wasdk-Microsoft.Windows.ApplicationModel.DynamicDependency.Bootstrap>=0.2.0; sys_platform == 'win32'",
]
[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }
paddlepaddle-gpu = { index = "paddle-cu126" }

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pyinstaller>=6.19.0,<7.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
