[package]
name = "cert-prep-desktop"
version = "0.1.0-alpha.1"
description = "Desktop wrapper for the local cert prep app."
authors = ["cert-prep"]
edition = "2021"

[lib]
name = "cert_prep_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cert-prep-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
