[package]
name = "exam-prep-desktop"
version = "0.1.0"
description = "Desktop wrapper for the local exam prep app."
authors = ["cert-prep"]
edition = "2021"

[lib]
name = "exam_prep_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "exam-prep-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

